--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
         <div id="topnav" class="row pt-lg-1 d-none d-lg-flex">
             <div class="col-12 col-md-3 col-lg-3 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                  <h2 class="logo-font text-black my-0"> Kalopsia  <i class="fas fa-eye"></i> Productions </h2></a>
+                  <h2 class="logo-font text-black my-0"> Kalopsia  <i class="fas fa-book-open"></i> Books </h2></a>
             </div>
             <div class="col-12 col-md-4 col-lg-4 my-auto py-1 py-lg-0">
                 <form method="GET" action="{% url 'products' %}">  <!-- search form taken from bootstrap --> 
@@ -69,9 +69,9 @@
                   </a>
                   <div class="dropdown-menu border-0" aria-labelledby="user-options">
                       {% if request.user.is_authenticated %}
-                          {% if request.user.is_superuser %}
-                              <a href="#" class="dropdown-item">Product Management</a>
-                          {% endif %}
+                        {% if request.user.is_superuser %}
+                          <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+                        {% endif %}
                           <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                           <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                       {% else %}
