--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -44,8 +44,8 @@
                         <td class="p-3 w-25"><img class="img-fluid rounded" src="{{ item.product.image.url }}"></td>
                         <td class="p-3 w-30">
                             <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                            <p class="my-0">${{ item.variation.price }}</p>
-                            <p class="my-0">{{ item.variation }}</p>
+                            <p class="my-0">${{ item.product.price }}</p>
+                            <p class="my-0">{{ item.product.description }}</p>
                         </td>
                         <td class="p-3 w-25">
                             <form class="form update-form" action="{% url 'update_bag' item.item_id %}" method="POST">
