--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -77,16 +77,12 @@
                                         <div class="row">
                                             <div class="col">
                                                 <p class=" mb-0 text-left">${{ product.price }}</p>
-                                                {% if product.rating %}
-                                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }}</small>
-                                                {% else %}
-                                                {% endif %}
-                                                {% if request.user.is_superuser %}
-                                                    <small class="ml-3">
-                                                        <a href="">Edit</a> | 
-                                                        <a class="text-danger" href="">Delete</a>
-                                                    </small>
-                                                {% endif %}
+                                        {% if request.user.is_superuser %}
+                                            <small class="ml-3">
+                                                <a href="{% url 'edit_product' product.id %}">Edit</a> | 
+                                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                            </small>
+                                        {% endif %}
                                             </div>
                                         </div>
                                     </div>
