changed wishlist template to display wishlist items correctly

--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,9 @@
                   </div>
               </li>
                 <li class="list-inline-item">
-                    <a class="text-black nav-link text-center">
+                    <a class="text-black nav-link text-center" href="{% url 'wishlist' %}">
                             <i class="fas fa-heart fa-lg"></i>
-                            <p>Favorites</p>
+                            <p>Wishlist</p>
                     </a>
                 </li>
                 <li class="list-inline-item">
