--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,6 +47,11 @@
                                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                         </small>
                                     {% endif %}
+                                    <form class="form update-form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist</button>
+                                    </form>
                                     <!-- Add to bag form -->
                                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                                         {% csrf_token %}
