--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -83,6 +83,11 @@
                                                 <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                             </small>
                                         {% endif %}
+                                        <form class="form update-form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                            <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist</button>
+                                        </form>
                                             </div>
                                         </div>
                                     </div>
