--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,136 +5,97 @@
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
-            <div class="col">
-
-            </div>
+            <div class="col"></div>
         </div>
     </div>
 {% endblock %}
 
 {% block content %}
 
-<!-- Gallery -->
-    <div class="container h-100">
-        <div class="row">
-            <div class="film-div filmstrip filmstrip col-12">
-                <h1 class="special-h text-center"> capturing the special moments and people in your life</h1>
+<!-- Author section-->
+<div class="container-fluid header-text">
+    <section>
+            <div class="row pb-2">
+                <div class="col-12 pt-4 text-center">
+                        <h4 class="text-uppercase"> Welcome! </h4>
+                        <p class="text-uppercase"> New! Glück im Burgenland - Release 29 Oct. 2021</p>
+                </div>
             </div>
-        </div>
-        <div class="row">
+            <div class="row pb-2">
+                <div class="col-12 text-center pb-5">
+                    <img class="rounded img-fluid center-block hero-photo" src="/media/6_Pj0e347.png" alt="photo of new book" width="500" height="auto">
+                </div>
+            </div>
+    </section>
+    <section>
+            <div class="row">
+                <div class="col-lg-5 sm-12 bg-black pt-2 pb-2">
+                    <img class="rounded img-fluid center-block author-photo" src="/media/christinegraen.jpg" alt="photo of the author" width="500" height="500">
+                </div>
+                <div class="col-lg-5 sm-12 bg-black pb-2">
+                    <h2>About the Author</h2>
+                    <p class="lead"> Christine Grän was born in Graz, lived in Berlin, Bonn, Botswana and Hong Kong and is now at home in Munich. With her heroine Anna Marx she created one of the first female detectives in German crime fiction, and the series was filmed as a twelve-part television series. Grän was awarded the Marlowe and the Ernst Hoferichter Prize. </p>
+                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+                </div>
+            </div>
             
-            <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-
-            <img
-                src="/media/_DSF1407-2.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait Man"
-            />
-        
-            <img
-                src="/media/DSCF5444.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait Woman"
-            />
-
-
-            <img
-                src="/media/wedding-1255520_1280.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait Man"
-            />
-
-
-            </div>
-        
-            <div class="col-lg-4 mb-4 mb-lg-0">
-            <img
-                src="/media/pexels-avonne-stalling-3916019.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait"
-            />
-        
-            <img
-                src="/media/DSCF3416.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait"
-            />
-            <img
-            src="/media/pexels-agung-pandit-wiguna-1320701.jpg"
-            class="w-100 shadow-1-strong rounded mb-4"
-            alt="Portrait"
-            />
-            </div>
-        
-            <div class="col-lg-4 mb-4 mb-lg-0">
-            <img
-                src="/media/maternity-4569911_1920.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait"
-            />
-        
-            <img
-                src="/media/DSCF5613.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait"
-            />
-            <img
-                src="/media/DSCF5396-3.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Portrait"
-            />
-        
-            </div>
-
         </div>
+    </section>
 
-        <div class="row">
-            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
-                <img
-                src="/media/moon.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Photo Moon"
-                />
-            </div>
-
-            <div class="col-lg-6 col-md-12 mb-4 mb-lg-0">
-                <img
-                src="/media/DSCF1870.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
-                alt="Photo Dogs"
-                />
-            </div>
-        </div>
-
-
-  <!-- Carousel -->
-
-        <div class="row">
-            <div class="film-div filmstrip filmstrip col-12">
-                <h1 class="special-h text-center"> creating unique, authentic, and on-brand visual content</h1>
-            </div>
-        </div>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="/media/2.png" alt="1st Slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="/media/office-932926_1920.jpg" alt="2nd slide">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="/media/company-5064997_1920.jpg" alt="3rd slide">
+<!-- Name section-->
+    <section class="py-5 bg-white">
+        <div class="my-2 py-2 kalopsya-container">
+            <div class="row justify-content-center h-100">
+                <div class="col-lg-6 py-2 my-auto bg-white">
+                    <h2>Why "Kalopsya Books"?</h2>
+                    <p class="lead">Kalopsya (From Ancient Greek καλοψία): The delusion of things being more beautiful than they are.<br>
+                        For me, the fascination in writing crime novels is to uncover the ugly and the dark below the surface of human existance
+                        in which things are never what they initially seem to be.  
+                    </p>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
         </div>
-    </div>
+    </section>
 
+<!-- Carousel section-->
+
+    <section class="py-5 bg-white">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="/media/1.png" alt="1st Slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/2.png" alt="2nd slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/3.png" alt="3rd slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/4.png" alt="3rd slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="/media/5.png" alt="3rd slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                    <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                    <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+
+<footer class="py-5 bg-dark">
+    <div class="container"><p class="m-0 text-center text-white">Christine Grän 2021</p></div>
+</footer>
 {% endblock %}
