--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -13,8 +13,8 @@
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="film-div col text-center filmstrip">
-                <h2 class="special-h">Services</h2>
+            <div class="col text-center">
+                <h2 class="special-h text-white">My Books</h2>
             </div>
         </div>
         <div class="row">
@@ -43,9 +43,9 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 order-md-first">
-                                <p class="text-muted mt-3 text-center text-md-left">
+                                <p class="mt-3 text-center text-md-left text-white">
                                     {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                        <span class="small"><a href="{% url 'products' %}">See everything again</a> | </span>
+                                        <span class="small"><a class="text-white" href="{% url 'products' %}">See everything again</a> | </span>
                                     {% endif %}
                                     {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                                 </p>
@@ -53,7 +53,8 @@
                         </div>
                         <div class="row">
                         {% for product in products %}
-                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
+                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 mb-2">
+                                <div class="card h-100">
                                     {% if product.image %}
                                         <a href="{% url 'product_detail' product.id %}">
                                             <img class="card-img-top1 img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
@@ -63,7 +64,7 @@
                                             <img class="card-img-top1 img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                         </a>
                                     {% endif %}
-                                    <div class="card-body bg-white pb-0">
+                                    <div class="card-body bg-white pb-1">
                                         <p class="mb-0 text-uppercase font-weight-bold">{{ product.name }}</p>
                                         {% if product.category %}
                                         <p class="small mt-1 mb-0">
@@ -72,25 +73,26 @@
                                             </a>
                                         </p>
                                         {% endif %}
+                                        {% if product.rating %}
+                                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                                            {% else %}
+                                                <small class="text-muted">No Rating</small>
+                                        {% endif %}
                                     </div>
                                     <div class="card-footer bg-white pt-0 border-0 text-left">
                                         <div class="row">
                                             <div class="col">
-                                                <p class=" mb-0 text-left">${{ product.price }}</p>
+                                                <p class=" mb-0 text-left">€{{ product.price }}</p>
                                         {% if request.user.is_superuser %}
-                                            <small class="ml-3">
+                                            <small>
                                                 <a href="{% url 'edit_product' product.id %}">Edit</a> | 
                                                 <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                             </small>
                                         {% endif %}
-                                        <form class="form update-form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
-                                            {% csrf_token %}
-                                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                            <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist</button>
-                                        </form>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                             </div>
                         {% endfor %}
                     </div>
