--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,23 @@
     {% block content %}
     {% endblock %}
 
+  
+  <footer class="py-5 bg-dark">
+    <!-- back to top button -->
+    <div class="btt-button shadow-sm bg-dark mt-2 rounded-0 border border-black">
+      <a class="btt-link d-flex h-100">
+          <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+      </a>
+    </div>
+      <div class="container"><p class="m-0 text-center text-white">Christine Grän 2021</p></div>
+  </footer>
+
     {% block postloadjs %}
+      <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+          window.scrollTo(0,0)
+        })
+      </script>
       <script type="text/javascript">
         $('.toast').toast('show');
       </script>
