--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -37,16 +37,10 @@
             </div>
         </li>
 
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="prints-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                About
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'blog' %}" id="prints-link"  aria-haspopup="true" aria-expanded="false">
+                Blog
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="prints-link">
-                <a href="" class="dropdown-item">Biography</a>
-                <a href="" class="dropdown-item">Bibliography</a>
-                <a href="" class="dropdown-item">Press</a>
-                <a href="" class="dropdown-item">Contact</a>
-            </div>
         </li>
     </ul>
 </div>
