--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -47,10 +47,11 @@
                                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                         </small>
                                     {% endif %}
+                                    <!-- Add to wishlist form -->
                                     <form class="form update-form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
                                         {% csrf_token %}
                                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                        <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist</button>
+                                        <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist  <i class="far fa-heart"></i></button>
                                     </form>
                                     <!-- Add to bag form -->
                                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
@@ -110,12 +111,6 @@
                                         </div>
                                     </form>
                             </div>
-                    </div>
-                    <!-- back to top button -->
-                    <div class="btt-button bg-dark shadow-sm rounded-0 mt-2 border border-black">
-                        <a class="btt-link d-flex h-100">
-                            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
-                        </a>
                     </div>
                 </div>
             </div>
