--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -45,7 +45,7 @@
                             <div class="col-12 col-md-6 order-md-first">
                                 <p class="mt-3 text-center text-md-left text-white">
                                     {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                        <span class="small"><a class="text-white" href="{% url 'products' %}">See everything again</a> | </span>
+                                        <span class="small"><a class="text-black" href="{% url 'products' %}">See everything again</a> | </span>
                                     {% endif %}
                                     {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                                 </p>
@@ -106,11 +106,6 @@
 {% block postloadjs %}
     {{ block.super }}
 
-    <script type="text/javascript">
-		$('.btt-link').click(function(e) {
-			window.scrollTo(0,0)
-		})
-	</script>
 
     <script type="text/javascript">
         $('#sort-selector').change(function() {
