--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,7 +16,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">
+    <div class="container-fluid mb-4">
         <div class="row">
             <div class="col">
                 <hr>
@@ -24,7 +24,7 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
+        <div class="row mb-4">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Default Voucher Delivery Information</p>
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
@@ -74,6 +74,7 @@
                 </div>
             </div>
         </div>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
