--- a/templates/base.html
+++ b/templates/base.html
@@ -125,22 +125,42 @@
     </div>
     {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
+    <!--Main Page Content-->
+    <main>
+      {% block page_header %}
+      {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+      {% block content %}
+      {% endblock %}
+    </main>
 
-  
-  <footer class="py-5 bg-dark">
-    <!-- back to top button -->
-    <div class="btt-button shadow-sm bg-dark mt-2 rounded-0 border border-black">
-      <a class="btt-link d-flex h-100">
-          <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
-      </a>
-    </div>
-      <div class="container"><p class="m-0 text-center text-white">Christine Grän 2021</p></div>
-  </footer>
+
+
+    <!--Footer-->
+    <footer class="py-2 bg-dark mt-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-md-4 mt-5 mt-md-0">
+            <p class="m-0 text-white text-left bg-dark"> © Christine Grän 2021</p>
+          </div>
+          <div class="col-12 col-md-4 mt-5 mt-md-0">
+            <div class="btt-button shadow-sm bg-dark mt-2 rounded-0">
+              <a class="btt-link d-flex h-100">
+                  <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 mt-5 mt-md-0">
+            <p class="text-white">Follow me on Social Media</p>
+                  <a class="facebook" href="" target="_blank" rel="noreferrer" aria-label="facebook"><i class="fa fa-facebook"></i></a></li>
+                  <a class="twitter" href="" target="_blank" rel="noreferrer" aria-label="twitter"><i class="fa fa-twitter"></i></a></li>
+                  <a class="instagram" href="" target="_blank" rel="noreferrer" aria-label="instagram"><i class="fab fa-instagram"></i></a></li>
+                  <a class="youtube" href="" rel="noreferrer" target="_blank" aria-label="youtube"><i class="fab fa-youtube"></i></a></li>
+                  <a class="spotify" href="" target="_blank" rel="noreferrer" aria-label="spotify"><i class="fab fa-spotify"></i></a></li>  
+          </div>
+        </div>
+      </div>
+    </footer>
 
     {% block postloadjs %}
       <script type="text/javascript">
