--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,6 +29,12 @@
                                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                     </a>
                                     {% endif %}
+                                    <!-- Add to wishlist form -->
+                                    <form class="form update-form text-center" method="POST" action="{% url 'add_to_wishlist' product.id %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                        <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist  <i class="far fa-heart"></i></button>
+                                    </form>
                             </div>
                             <div class="product-details col-12 col-md-6">
                                     <h2 class="mb-0 text-uppercase font-weight-bold">{{ product.name }}</h2>
@@ -47,26 +53,21 @@
                                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                         </small>
                                     {% endif %}
-                                    <!-- Add to wishlist form -->
-                                    <form class="form update-form" method="POST" action="{% url 'add_to_wishlist' product.id %}">
-                                        {% csrf_token %}
-                                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                        <button class="btn btn-black rounded-0 text-uppercase mt-5">Add to wishlist  <i class="far fa-heart"></i></button>
-                                    </form>
                                     <!-- Add to bag form -->
                                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                                         {% csrf_token %}
                                         <div class="form-row">
                                             {% with product.has_variation as v %}
                                             {% if v %}
-                                                <div class="col-12">
-                                                    <p><strong> Would you like a dedication from the author?</strong></p>
-                                                    <div class="form-check">
-                                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                                        <label class="form-check-label" for="defaultCheck1">
-                                                          Yes, please!
-                                                        </label>
-                                                    </div>
+                                                <!-- Dedication form -->
+                                                <div class="col-12 pt-4">
+                                                    <p><strong> Would you like a dedication from the author? (Max. 60 characters)</strong></p>
+                                                    <form>
+                                                        <div class="form-group">
+                                                            <label for="dedication">Write it below:</label>
+                                                            <textarea class="form-control" id="dedication" name="dedication" maxlength="60" rows="3"></textarea>
+                                                        </div>
+                                                    </form>
                                                 </div>
                                             {% endif %}
                                             <div class="col-12">
