--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,8 +49,8 @@
                                     <p>${{ product.price }}</p>
                                     {% if request.user.is_superuser %}
                                         <small class="ml-3">
-                                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                            <a href="{% url 'edit_product' product.id %}" class="btn btn-primary btn-sm">Edit</a> | 
+                                            <a onclick="deleteProducts({{ product.id }});" class="btn btn-danger btn-sm text-white">Delete</a>
                                         </small>
                                     {% endif %}
                                     <!-- Add to bag form -->
@@ -117,6 +117,18 @@
             </div>
         </div>
     </div>
+
+<script>
+    function deleteProducts(productId){
+        console.log(productId);
+        if (productId){
+        flag=confirm("Are you sure you want to delete this item?");
+            if (flag == true){
+                window.location.href = "delete/"+productId;
+            }
+        }
+    }
+</script>
 {% endblock %}
 {% block postloadjs %}
 {{ block.super }}
