change img url on index site

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
     <section>
             <div class="row">
                 <div class="col-lg-5 sm-12 bg-black pt-2 pb-2">
-                    <img class="rounded img-fluid center-block author-photo" src="/media/christinegraen.jpg" alt="photo of the author" width="500" height="500">
+                    <img class="rounded img-fluid center-block author-photo" src="{{ MEDIA_URL }}christinegraen.jpg" alt="photo of the author" width="500" height="500">
                 </div>
                 <div class="col-lg-5 sm-12 bg-black pb-2">
                     <h2>About the Author</h2>
