--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="row pb-2">
                 <div class="col-12 text-center pb-5">
-                    <img class="rounded img-fluid center-block hero-photo" src="/media/6_Pj0e347.png" alt="photo of new book" width="500" height="auto">
+                    <img class="rounded img-fluid center-block hero-photo" src="{{ MEDIA_URL }}6_Pj0e347.png" alt="photo of new book" width="500" height="auto">
                 </div>
             </div>
     </section>
@@ -65,19 +65,19 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="/media/1.png" alt="1st Slide">
+                            <img class="d-block w-100" src="{{ MEDIA_URL }}1.png" alt="1st Slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/2.png" alt="2nd slide">
+                            <img class="d-block w-100" src="{{ MEDIA_URL }}2.png" alt="2nd slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/3.png" alt="3rd slide">
+                            <img class="d-block w-100" src="{{ MEDIA_URL }}3.png" alt="3rd slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/4.png" alt="3rd slide">
+                            <img class="d-block w-100" src="{{ MEDIA_URL }}4.png" alt="3rd slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="/media/5.png" alt="3rd slide">
+                            <img class="d-block w-100" src="{{ MEDIA_URL }}5.png" alt="3rd slide">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
